09-Dec-2014 Apple Clang toolchains now supports response files.

08-Dec-2014 Upgraded BuildAMation .sln and .csprojs for Bam, Bam.Core, BamOptionGenerator to use VisualStudio 2013 Express. These should be compatible as far back as VS 2010 Express. .NET framework 4 is now used to build the code. This is compatible with Mono 3 and MonoDevelop 5.

08-Dec-2014 Adding Clang-Apple600 package for Xcode 6 support.

80-Dec-2014 Adding a C++11 test packages, Cxx11Test1-dev.

10-Nov-2014 Adding Gcc-4.8 package.

02-Nov-2014 Adding ICU package, for internationalization used by Qt5.

01-Nov-2014 Adding Qt-5.3.2 package.

30-Oct-2014 Relative package roots from definition files are now resolved to the package directory, not the working directory.

26-Oct-2014 Added QtCommon-5.x, and Qt-5.1.1, Qt-5.2.0, Qt-5.3.1 packages.

26-Oct-2014 Reversioned package QtCommon-dev to QtCommon-4.x.

11-Sep-2014 Added -pedantic command line option, to enable pedantic validation during dependency graph generation. Default is disabled.

08-Sep-2014 Non-keyword arguments to the Python test runner, of the form x.version=MMM will be added as arguments to each BuildAMation command line run as -x.version=MMM. Useful for things like the WindowsSDK.

07-Sep-2014 Bumped supported version of bam and Bam.Core assemblies to v4.0.

07-Sep-2014 Use the version of the CLR runtime to choose the CSharp compiler used to build the assembly of packages.

30-Aug-2014 Changed the use of a // StateOnly comment to a proper attribute [Bam.Core.ValueOnlyOption] to indicate an option property has no delegates - it is a just a value.

28-Aug-2014 While resolving packages with multiple versions down to one, if others have been cast aside before, ignore any of their dependencies when considering new packages. This allows two package versions to have different dependent package versions, and the one that wins, discards their version of the dependent from later consideration.
